--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "prettier --write \"**/**/*.{js,ts,tsx}\""
     },
     "dependencies": {
+        "@apollo/client": "^3.7.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@fullcalendar/core": "^5.11.2",
@@ -20,8 +21,10 @@
         "@fullcalendar/timegrid": "^5.11.2",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.3",
+        "apollo-client": "^2.6.10",
         "chart.js": "^3.9.1",
         "formik": "^2.2.9",
+        "graphql": "^16.6.0",
         "mdi-material-ui": "^7.6.0",
         "next": "12.3.1",
         "primeflex": "^3.2.1",
