--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
         "react-transition-group": "^4.4.5"
     },
     "devDependencies": {
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.27",
         "eslint": "8.21.0",
         "eslint-config-next": "12.2.4",
         "prettier": "2.7.1",
-        "sass": "^1.54.4"
+        "sass": "^1.54.4",
+        "typescript": "^4.9.4"
     }
 }
