--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@fullcalendar/timegrid": "^5.11.2",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.3",
+        "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
         "chart.js": "^3.9.1",
+        "eslint-plugin-prettier": "^4.2.1",
         "formik": "^2.2.9",
         "graphql": "^16.6.0",
         "js-cookie": "^3.0.1",
@@ -36,12 +38,12 @@
         "react-transition-group": "^4.4.5"
     },
     "devDependencies": {
-        "@types/node": "^18.11.18",
+        "@types/node": "18.13.0",
         "@types/react": "^18.0.27",
         "eslint": "8.21.0",
         "eslint-config-next": "12.2.4",
         "prettier": "2.7.1",
         "sass": "^1.54.4",
-        "typescript": "^4.9.4"
+        "typescript": "4.9.5"
     }
 }
