--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "chart.js": "^3.9.1",
         "formik": "^2.2.9",
         "graphql": "^16.6.0",
+        "js-cookie": "^3.0.1",
         "mdi-material-ui": "^7.6.0",
         "next": "12.3.1",
         "primeflex": "^3.2.1",
