--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "formik": "^2.2.9",
         "graphql": "^16.6.0",
         "js-cookie": "^3.0.1",
+        "jsonwebtoken": "^9.0.0",
+        "jwt-decode": "^3.1.2",
         "mdi-material-ui": "^7.6.0",
         "next": "12.3.1",
         "primeflex": "^3.2.1",
