10-crud-operations-implementation-in-all-pages: Reformatting structure of whole project

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
         "start": "next start",
         "export": "next build && next export",
         "lint": "next lint",
-        "format": "prettier --write \"**/**/*.{js,ts,tsx}\""
+        "format": "prettier --write \"**/**/*.{js,ts,tsx}\"",
+        "eslint:test": "eslint src/**/*.{ts,tsx}",
+        "eslint:format": "eslint --fix src/**/*.{ts,tsx}",
+        "prettier:test": "prettier -c ./.prettierrc src/**/*.{ts,tsx,js,json,css,less,sass,scss,less,html,md}",
+        "prettier:format": "prettier -c ./.prettierrc --write src/**/*.{ts,tsx,js,json,css,sass,scss,less,html,md}",
+        "p:test-file": "prettier -c ./.prettierrc --write ./src/components/markup.html"
     },
     "dependencies": {
         "@apollo/client": "^3.7.3",
