--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@apollo/client": "^3.7.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@faker-js/faker": "^7.6.0",
         "@fullcalendar/core": "^5.11.2",
         "@fullcalendar/daygrid": "^5.11.2",
         "@fullcalendar/interaction": "^5.11.2",
