--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
         "apollo-client": "^2.6.10",
         "chart.js": "^3.9.1",
         "eslint-plugin-prettier": "^4.2.1",
+        "formidable": "^2.1.1",
         "formik": "^2.2.9",
+        "fs-extra": "^11.1.0",
         "graphql": "^16.6.0",
         "js-cookie": "^3.0.1",
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "mdi-material-ui": "^7.6.0",
+        "mime": "^3.0.0",
         "next": "12.3.1",
+        "nft.storage": "^7.0.3",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primereact": "^8.6.1",
@@ -46,7 +50,9 @@
         "react-transition-group": "^4.4.5"
     },
     "devDependencies": {
+        "@types/formidable": "^2.0.5",
         "@types/jsonwebtoken": "^9.0.1",
+        "@types/mime": "^3.0.1",
         "@types/node": "18.13.0",
         "@types/react": "^18.0.27",
         "eslint": "8.21.0",
