5-gateway-integration-for-storage: Download Semester Result Feature added

--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
         "@fullcalendar/timegrid": "^5.11.2",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.3",
+        "@types/file-saver": "^2.0.5",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
         "chart.js": "^3.9.1",
         "eslint-plugin-prettier": "^4.2.1",
+        "file-saver": "^2.0.5",
         "formidable": "^2.1.1",
         "formik": "^2.2.9",
         "fs-extra": "^11.1.0",
