5-gateway-integration-for-storage: Upload and download semester results have been setup, but 1 bug remaining that is about the file useState hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "apollo-client.js"  ],
+, "apollo-client.js", "queries/results/stopCronJob.ts"  ],
   "exclude": [
     "node_modules"
   ]
