--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/file-saver": "^2.0.5",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
+        "axios": "^1.3.4",
         "chart.js": "^3.9.1",
         "eslint-plugin-prettier": "^4.2.1",
         "file-saver": "^2.0.5",
