--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "axios": "^1.3.4",
         "chart.js": "^3.9.1",
         "eslint-plugin-prettier": "^4.2.1",
+        "ethers": "5.6.9",
         "file-saver": "^2.0.5",
         "formik": "^2.2.9",
         "fs-extra": "^11.1.0",
