--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "@apollo/client": "^3.7.3",
+        "@aws-sdk/abort-controller": "^3.296.0",
+        "@aws-sdk/client-s3": "^3.299.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@faker-js/faker": "^7.6.0",
@@ -25,23 +27,32 @@
         "@fullcalendar/interaction": "^5.11.2",
         "@fullcalendar/react": "^5.11.2",
         "@fullcalendar/timegrid": "^5.11.2",
+        "@google-cloud/storage": "^6.9.4",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.3",
         "@types/file-saver": "^2.0.5",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
+        "aws-sdk": "^2.1343.0",
         "axios": "^1.3.4",
         "chart.js": "^3.9.1",
+        "cloudinary": "^1.35.0",
+        "cors": "^2.8.5",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5.6.9",
+        "express": "^4.18.2",
         "file-saver": "^2.0.5",
         "formik": "^2.2.9",
+        "fs": "^0.0.1-security",
         "fs-extra": "^11.1.0",
         "graphql": "^16.6.0",
         "js-cookie": "^3.0.1",
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "mdi-material-ui": "^7.6.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "next": "12.3.1",
         "nft.storage": "^7.0.3",
         "primeflex": "^3.2.1",
