--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
         "primereact": "^8.6.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-transition-group": "^4.4.5"
+        "react-transition-group": "^4.4.5",
+        "sonner": "^0.3.0"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^9.0.1",
