--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "primereact": "^8.6.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-toggle-dark-mode": "^1.1.1",
         "react-transition-group": "^4.4.5",
         "sonner": "^0.3.0"
     },
