--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "@fullcalendar/timegrid": "^5.11.2",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.3",
+        "@react-pdf/renderer": "^3.1.9",
+        "@react-pdf/styled-components": "^1.4.0",
+        "@react-pdf/types": "^2.3.1",
         "@types/file-saver": "^2.0.5",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
