--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
         "@react-pdf/styled-components": "^1.4.0",
         "@react-pdf/types": "^2.3.1",
         "@types/file-saver": "^2.0.5",
+        "@types/react-dom": "^18.2.4",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
         "axios": "^1.3.4",
+        "blob-stream": "^0.1.3",
         "cors": "^2.8.5",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5.6.9",
         "express": "^4.18.2",
+        "file-loader": "^6.2.0",
         "file-saver": "^2.0.5",
         "formik": "^2.2.9",
         "fs": "^0.0.1-security",
