--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@react-pdf/types": "^2.3.1",
         "@types/file-saver": "^2.0.5",
         "@types/react-dom": "^18.2.4",
+        "@types/react-pdf": "^6.2.0",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
         "axios": "^1.3.4",
