63-dao-integeration: Integerated the DAO system system, Now need to send emails to the specified users

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "apollo-client.js", "queries/results/stopCronJob.ts"  ],
+    "**/*.tsx",
+    "apollo-client.js"
+   ],
   "exclude": [
     "node_modules"
   ]
