--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "axios": "^1.3.4",
         "blob-stream": "^0.1.3",
         "cors": "^2.8.5",
+        "emailjs": "^4.0.2",
+        "emailjs-com": "^3.2.0",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5.6.9",
         "express": "^4.18.2",
@@ -60,6 +62,7 @@
         "react-dom": "17.0.2",
         "react-toggle-dark-mode": "^1.1.1",
         "react-transition-group": "^4.4.5",
+        "sendmail": "^1.6.1",
         "sonner": "^0.3.0"
     },
     "devDependencies": {
