--- a/package.json
+++ b/package.json
@@ -30,14 +30,20 @@
         "@react-pdf/renderer": "^3.1.9",
         "@react-pdf/styled-components": "^1.4.0",
         "@react-pdf/types": "^2.3.1",
+        "@sendgrid/mail": "^7.7.0",
         "@types/file-saver": "^2.0.5",
         "@types/react-dom": "^18.2.4",
         "@types/react-pdf": "^6.2.0",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "apollo-client": "^2.6.10",
         "axios": "^1.3.4",
+        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "blob-stream": "^0.1.3",
+        "core-js": "^3.30.2",
         "cors": "^2.8.5",
+        "emailjs": "^4.0.2",
+        "emailjs-com": "^3.2.0",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5.6.9",
         "express": "^4.18.2",
@@ -50,9 +56,13 @@
         "js-cookie": "^3.0.1",
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
+        "mail": "^0.2.3",
         "mdi-material-ui": "^7.6.0",
+        "net": "^1.0.2",
         "next": "12.3.1",
+        "next-transpile-modules": "^10.0.0",
         "nft.storage": "^7.0.3",
+        "nodemailer": "^6.9.2",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primereact": "^8.6.1",
@@ -60,7 +70,8 @@
         "react-dom": "17.0.2",
         "react-toggle-dark-mode": "^1.1.1",
         "react-transition-group": "^4.4.5",
-        "sonner": "^0.3.0"
+        "sonner": "^0.3.0",
+        "tls": "^0.0.1"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^9.0.1",
