--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "jwt-decode": "^3.1.2",
         "mdi-material-ui": "^7.6.0",
         "next": "12.3.1",
+        "next-fonts": "^1.5.1",
         "nft.storage": "^7.0.3",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
