--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,39 @@
 {
-  "env": {
+    "env": {
       "browser": true,
       "es6": true
-  },
-  "extends": [
+    },
+    "extends": [
       "plugin:react/recommended",
       "standard",
       "plugin:prettier/recommended"
-  ],
-  "globals": {
+    ],
+    "globals": {
       "Atomics": "readonly",
       "SharedArrayBuffer": "readonly"
-  },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
+    },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
       "ecmaFeatures": {
-          "jsx": true
+        "jsx": true
       },
       "ecmaVersion": 2018,
       "sourceType": "module"
-  },
-  "plugins": [
+    },
+    "plugins": [
       "react",
       "@typescript-eslint"
-  ],
-  "rules": {
-
+    ],
+    "rules": {
+      "import/no-unresolved": [
+        "error",
+        {
+          "ignore": [
+            // Add an exception for the font import
+            "\\./fonts/WorkSansLight.ttf"
+          ]
+        }
+      ]
+    }
   }
-}
+  
